# Mobile_Robot_ROS_Arduino

./: README.md
Librerias/bno055_sketch/: bno055_sketch.ino
Librerias/encoder_sketch/: encoder_sketch.ino
Librerias/i2c_scanner/: i2c_scanner.ino
Librerias/motor_sketch/: motor_sketch.ino
Librerias/ros_sketch/: ros_sketch.ino
Libreries_Arduino/bno055_sketch/: bno055_sketch.ino
Libreries_Arduino/encoder_sketch/: encoder_sketch.ino
Libreries_Arduino/i2c_scanner/: i2c_scanner.ino
Libreries_Arduino/motor_sketch/: motor_sketch.ino
Libreries_Arduino/ros_sketch/: ros_sketch.ino
ROS packages/veggie_urdf/: CMakeLists.txt  package.xml
ROS packages/veggie_urdf/launch/: abb_irb120_con_efector_final.launch~  abb_irb120_gazebo.launch~  veggiebot_rviz.launch  veggiebot_world.launch
ROS packages/veggie_urdf/launch/includes/: description.launch.xml
ROS packages/veggie_urdf/meshes/Collisions/: battery.stl  second_level_2.stl  third_level_2.stl
ROS packages/veggie_urdf/meshes/Visuals/: Wheel.stl  battery.stl
ROS packages/veggie_urdf/urdf/: medusa_robot (copia).urdf~  medusa_robot.urdf~  veggiebot.urdf.xacro  veggiebot_gazebo_test.urdf
ROS packages/veggiebot_bringup/: CMakeLists.txt
ROS packages/veggiebot_bringup/launch/: veggiebot_core.launch  veggiebot_lidar_kinect.launch  veggiebot_robot_kinect.launch  veggiebot_rplidar.launch
ROS packages/veggiebot_bringup/launch/includes/: description.launch.xml
ROS packages/veggiebot_description/launch/: Medusa_vision.launch~  abb_irb120.launch~  ejercicio2-3.launch~  veggie_conf.rviz
ROS packages/veggiebot_description/meshes/Visuals/: second_level.stl
ROS packages/veggiebot_description/rviz/: model.rviz
ROS packages/veggiebot_description/urdf/: common_properties.xacro  veggiebot.urdf.xacro
ROS packages/veggiebot_interface/: CMakeLists.txt  package.xml
ROS packages/veggiebot_interface/src/: interface_arduino_2.cpp
ROS packages/veggiebot_localization/: package.xml
ROS packages/veggiebot_msgs/: package.xml
ROS packages/veggiebot_navigation/: CMakeLists.txt  package.xml
ROS packages/veggiebot_navigation/launch/: navigation_26_09_18.launch  veggiebot_navigation.launch
ROS packages/veggiebot_navigation/maps/: Map_launcher_4.5.pgm  mapcuadrado.pgm  mapcuadrado2.yaml  summer_map.pgm
ROS packages/veggiebot_navigation/param/: dwa_local_planner_params.yaml
ROS packages/veggiebot_slam/: package.xml
ROS packages/veggiebot_slam/launch/: Slam_realsense.launch
ROS packages/veggiebot_teleop/: CMakeLists.txt  package.xml
ROS packages/veggiebot_teleop/scripts/: veggiebot_teleop_key
mobile_robot_arduino/: mobile_robot_arduino.ino
veggie_urdf/launch/: abb_irb120_con_boligrafo.launch~  medusa_legs.launch~  medusa_vision_arduino.launch~  veggie_conf.rviz  veggiebot_gazebo.launch  veggiebot_gazebo_test.launch
veggie_urdf/meshes/Collisions/: base_link.stl  kinect.stl  second_level.stl  second_level_3.stl  third_level.stl  wheel_left.stl
veggie_urdf/meshes/Visuals/: second_level_2.stl  second_level_3.stl  third_level.stl  third_level_2.stl  wheel_left.stl
veggie_urdf/urdf/: medusa_robot_legs.urdf~  veggiebot.gazebo.xacro  veggiebot.urdf  veggiebot.urdf~
veggiebot_bringup/: package.xml  robot_test.rviz
veggiebot_bringup/launch/: robot_test.rviz  veggiebot_lidar_realsense.launch  veggiebot_model.launch  veggiebot_robot_realsense.launch
veggiebot_description/: CMakeLists.txt  package.xml
veggiebot_description/launch/: veggiebot.launch  veggiebot.launch~
veggiebot_description/meshes/Visuals/: base_link.stl  kinect.STL
veggiebot_description/urdf/: veggiebot.gazebo.xacro
veggiebot_interface/src/: interface_arduino.cpp
veggiebot_localization/: CMakeLists.txt
veggiebot_localization/launch/: veggiebot_localization.launch
veggiebot_msgs/: CMakeLists.txt
veggiebot_navigation/maps/: map_pool.yaml  mapa_26_09_18.pgm  mapa_26_09_18.yaml  mapcuadrado.yaml
veggiebot_navigation/param/: costmap_common_params_veggiebot.yaml  global_costmap_params.yaml
veggiebot_slam/: CMakeLists.txt
veggiebot_slam/launch/: Slam_Kinect.launch  Slam_rplidar.launch
veggiebot_teleop/launch/: veggiebot_teleop_key.launch  veggiebot_teleop_ps4.launch
