<?xml version="1.0"?>
<package>
  <name>veggiebot_bringup</name>
  <version>0.1.6</version>
  <description>
    roslaunch scripts for starting the veggiebot
  </description>
  <license>Apache License 2.0</license>
  <author email="veggiebotceit@gmail.com">Carlos</author>
  <maintainer email="veggiebotceit@gmail.com">Carlos</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>veggiebot_description</run_depend>
  <run_depend>veggiebot_teleop</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosserial_python</run_depend>
  <export></export>
</package>
