<?xml version="1.0"?>
<package>
  <name>veggiebot_msgs</name>
  <version>0.1.3</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 packages
  </description>
  <license>Apache License 2.0</license>
  <author email="veggiebotceit@gmail.com">Carlos</author>
  <maintainer email="veggiebotceit@gmail.com">Carlos</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
