<?xml version="1.0"?>
<package>
  <name>veggiebot_navigation</name>
  <version>0.1.6</version>
  <description>The veggiebot_navigation package</description>
  <license>Apache License 2.0</license>
  <author email="veggiebotceit@gmail.com">Carlos</author>
  <maintainer email="veggiebotceit@gmail.com">Carlos</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
</package>
